@@ -172,6 +172,9 @@ enum {
 	ESLURM_PORTS_INVALID,
 	ESLURM_PROLOG_RUNNING,
 	ESLURM_NO_STEPS,
+	ESLURM_INVALID_BLOCK_STATE,
+	ESLURM_INVALID_BLOCK_LAYOUT,
+	ESLURM_INVALID_BLOCK_NAME,
 
 	/* switch specific error codes, specific values defined in plugin module */
 	ESLURM_SWITCH_MIN = 3000,
